# SurfExtract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGlew.cmake  FindOpenCV.cmake
src/: ArgParser.h  CMakeLists.txt  GLRenderer.cpp  GLRenderer.h  ImageWriter.cpp  ImageWriter.h  MatrixFileUtils.cpp  MatrixFileUtils.h  MatrixHelpers.h  SurfacePosRenderer.cpp  main.cpp
